/** 对象状态枚举 */
enum ObjektState{
    /** 原始 */
    Original = "O",
    /** 创建 */
    Created  = "C",
    /** 修改 */
    Updated  = "U",
    /** 删除 */
    Deleted  = "D"
}



/** 组件状态 */
enum UIState{
    
    /** 编辑状态 */
    edit = "edit",
    /** 浏览状态 */
    browse = "browse",
}